Fix the overflowing UIs --

--- a/src/index.css
+++ b/src/index.css
@@ -4,15 +4,13 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-  scrollbar-width: none !important;
-  /* font-family: Poppins; */
+* {
+  scrollbar-width: none;
 }
 
-.scroll {
+/* .scroll {
   scrollbar-width: none !important;
-}
+} */
 
 .dark-mode {
   /* color: rgba(255, 255, 255, 0.8); */
